# translate_agent

./: .env.example  .gitignore  CLAUDE.md  PROJECT_STRUCTURE.md  README.md  RESTRUCTURE_NOTES.md  alembic.ini  check_status.sh  environment.yml  main.py  middleware.ts  package-lock.json  package.json  pyproject.toml  requirements.txt  requirements_agent.txt  search_logs.sh  tailwind.config.js  trigger.config.ts  tsconfig.json  view_logs.sh  完整PRD_v2.0.md
alembic/: env.py
alembic/versions/: 655c3602af47_initial_migration_create_translation_.py
app/: __init__.py  globals.css  layout.tsx  main.py  page.tsx
app/(dashboard)/: layout.tsx
app/(pricing)/: page.tsx
app/api/: __init__.py  tasks.py  upload.py
app/chat/: page.tsx
app/compent/: chat_compent.py  file_compent.py  gradio.py  index.py  radio_compent.py
app/core/: __init__.py  engine.py  scheduler.py  state_machine.py
app/db/: README.md  __init__.py  database.py  models.py  repository.py
app/glossary/: page.tsx
app/history/: page.tsx
app/lib/: config.ts
app/login/: page.tsx
app/models/: responses.py  task.py
app/pricing/: page.tsx
app/prompt/: struct_json.txt  translate_chat_str.txt  translate_docx_json.txt  translate_pptx_json.txt
app/services/: DATABASE_INTEGRATION.md  FILES_SUMMARY.md  FINAL_REPORT.md  INTEGRATION.md  README.md  README_PPT.md  TASK_2_REPORT.md  factory.py  ppt_translation_service.py  verify_setup.py
app/settings/: page.tsx
app/signup/: page.tsx
app/translate/: page.tsx
app/util/: config.py  index.py  pptx.py
components/: app-layout.tsx  app-sidebar.tsx  chat-header.tsx  chat-history-sidebar.tsx  chat-input-area.tsx  chat-output-area.tsx  dashboard-header.tsx  dashboard-quick-actions.tsx  dashboard-recent-translations.tsx  dashboard-sidebar-nav.tsx  dashboard-sidebar.tsx  dashboard-usage-card.tsx  dashboard-usage-chart.tsx  dashboard-user-menu.tsx  dashboard-welcome-card.tsx  features-section.tsx  footer.tsx  glossary-export-dialog.tsx  glossary-header.tsx  glossary-import-dialog.tsx  glossary-language-filter.tsx  glossary-sidebar.tsx  glossary-tag-filter.tsx  glossary-term-dialog.tsx  glossary-term-table.tsx  glossary-toolbar.tsx  glossary-upload-completion.tsx  glossary-upload-config.tsx  glossary-upload-file-selector.tsx  glossary-upload-header.tsx  glossary-upload-preview.tsx  glossary-upload-progress.tsx  glossary-upload-step-indicator.tsx  header.tsx  hero-section.tsx  history-detail-modal.tsx  history-empty-state.tsx  history-filter-bar.tsx  history-header.tsx  history-item.tsx  (+29 more)
components/translate/: file-uploader.tsx  index.ts  model-selector.tsx  progress-bar.tsx
lib/: api.ts  auth.ts  mailer.ts  translation-queue.ts  trigger.ts
lib/api/: client.ts  index.ts  types.ts
lib/i18n/: context.tsx  index.ts  translations.ts
lib/theme/: index.ts  provider.tsx
prisma/: schema.prisma
scripts/: restore_pptx.py
source_backup/: CLAUDE.md  main.py  requirements.txt
src/trigger/: translate.ts
tests/: conftest.py
tests/api/: test_history.py  test_tasks_template.py  test_translate.py
tests/db/: __init__.py  (+1 more)
translate_agent/: .env.example  DESIGN_DELIVERY.md  PROJECT_SUMMARY.md  README.md
types/: next-auth.d.ts
uploads/: 9a30b2e6-1bbe-407a-bc94-8108027a7324.pptx
web/: PROJECT_STRUCTURE.md  V0_PROMPT.md  next.config.js  package-lock.json  package.json  tailwind.config.js
(+107 files in other folders)
